"Match Texture Space" Causes blender to crash (also doesnt evaluate right when curve geo changes) #68779

Closed
opened 2019-08-17 20:12:07 +02:00 by Likkez · 8 comments

System Information
Operating system: Linux-5.0.12-050012-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40

Blender Version
Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-16 13:02, hash: 078d02f557
Worked: (optional)

Short description of error
Blender instantly closes after clicking 'Match texture space' button on bezier curve object

Exact steps for others to reproduce the error

  1. Add bezier curve
  2. Go to Object Data tab and open Texture Space submenu
  3. Click Match Texture Space button.
**System Information** Operating system: Linux-5.0.12-050012-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40 **Blender Version** Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-16 13:02, hash: `078d02f557` Worked: (optional) **Short description of error** Blender instantly closes after clicking 'Match texture space' button on bezier curve object **Exact steps for others to reproduce the error** 1. Add bezier curve 2. Go to Object Data tab and open Texture Space submenu 3. Click Match Texture Space button.
Author

Added subscriber: @Likkez-2

Added subscriber: @Likkez-2
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm this, checking...

Can confirm this, checking...
Member

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey
Member

Caused by 3566b81c8b.
Even though we ensure an evaluated depsgraph in match_texture_space_exec, the object->runtime.curve_cache is NULL...

If I substitute the Assert in https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/curve/editcurve.c$7111

with

  if (object->runtime.curve_cache == NULL) {
    Scene *scene = CTX_data_scene(C);
    BKE_displist_make_curveTypes(depsgraph, scene, object, false, false);
  }

Then I dont get a crash, but still the runtime curve cache doesnt seem to be updated/invalidated at all (if I change a defaults bezier curve Depth e.g., shouldnt I get a different result if I do Match Texture Space then? -- it is always the same, no matter how much the bounding box actually changes...)

I guess @Sergey or @mont29 would know?

Caused by 3566b81c8b. Even though we ensure an evaluated depsgraph in `match_texture_space_exec`, the `object->runtime.curve_cache` is NULL... If I substitute the Assert in https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/curve/editcurve.c$7111 with ``` if (object->runtime.curve_cache == NULL) { Scene *scene = CTX_data_scene(C); BKE_displist_make_curveTypes(depsgraph, scene, object, false, false); } ``` Then I dont get a crash, but still the runtime curve cache doesnt seem to be updated/invalidated at all (if I change a defaults bezier curve Depth e.g., shouldnt I get a different result if I do `Match Texture Space` then? -- it is always the same, no matter how much the bounding box actually changes...) I guess @Sergey or @mont29 would know?
Philipp Oeser changed title from "Match Texture Space" Causes blender to crash to "Match Texture Space" Causes blender to crash (also doesnt evaluate right when curve geo changes) 2019-08-19 12:14:42 +02:00

@lichtwerk, you need to access runtime.curve_cache from evaluated object, and write new texture space based on the min/max values calculated from it to original curve.

There is also missing dependency graph recalc tag on the curve at the end of that operator.

@lichtwerk, you need to access `runtime.curve_cache` from evaluated object, and write new texture space based on the min/max values calculated from it to original curve. There is also missing dependency graph recalc tag on the curve at the end of that operator.

This issue was referenced by 5615c675af

This issue was referenced by 5615c675afedf68261562d6d944b808a64ace8fe
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Philipp Oeser self-assigned this 2019-08-19 14:37:51 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68779
No description provided.